amFix subtitles overlap that broke loop for adjacent subtitles, Update travis job titles, fix seek within selected clip, add back loop button in top menu, selected subtitles chunk UI

--- a/src/components/Waveform.module.css
+++ b/src/components/Waveform.module.css
@@ -44,13 +44,6 @@
   fill: #8f9aad;
 }
 
-.highlightedClipBorder {
-  /* fill: rgba(0, 255, 0, 0.26); */
-  fill: #8f9aad;
-  stroke: none;
-  cursor: ew-resize;
-}
-
 .subtitlesSvg {
   /* background-color: #616161; */
   background-color: #222222;
@@ -62,6 +55,10 @@
 .subtitlesChunkRectangle {
   stroke-width: 1px;
   fill: hsla(205, 20%, 70%, 0.3);
+}
+
+.selectedSubtitlesChunk {
+  fill: hsla(205, 20%, 70%, 0.6);
 }
 
 .subtitlesText {
